[package]
name = "simple-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.10.0"
transaction = "0.2.1"
transaction-diesel-mysql = {path ="../../"}
